Closed Bug 930057 Opened 11 years ago Closed 11 years ago

Incorrect return false in TypedObject JIT compilation

Categories

(Core :: JavaScript Engine: JIT, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: nmatsakis, Assigned: nmatsakis)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

IonBuilder::lookupTypedObjectField() incorrectly returns false at one point even though no fatal error has occurred. Correct thing is to return true but yield an empty resulting TypeRepresentationSet.
Attached patch Bug930057.diffSplinter Review
Assignee: nobody → nmatsakis
Attachment #821123 - Flags: review?(jdemooij)
Comment on attachment 821123 [details] [diff] [review]
Bug930057.diff

Review of attachment 821123 [details] [diff] [review]:
-----------------------------------------------------------------

Do you happen to have a testcase we can add maybe?
Attachment #821123 - Flags: review?(jdemooij) → review+
Component: JavaScript Engine → JavaScript Engine: JIT
jandem: I can try to come up with one.
https://hg.mozilla.org/mozilla-central/rev/506e95c64fb4
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: