Bug 930057 - Incorrectly returning false r=jandem